# tech-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  index.html  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  desktop-release.yml  pages.yml
api/: providers.js
api/_lib/: auth.js
api/agent/: runs.js
api/agent/runs/[id]/: events.js
api/auth/: login.js  send-code.js  session.js  verify-code.js
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: main.js  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  DESKTOP.md  SECURITY.md
public/: manifest.webmanifest
services/api/: README.md
services/api/src/: server.js
src/: App.css  App.tsx  index.css
src/data/: product.ts
src/lib/: api.ts  useLocalStorage.ts
src/types/: product.ts
