[package]
name = "tech-agent"
version = "1.0.7"
description = "Tech-agent desktop client"
authors = ["Tech-agent contributors"]
license = "MIT"
repository = "https://github.com/sunguoyuan415-create/tech-agent"
edition = "2021"

[lib]
name = "tech_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = "=2.11.1"
